# ovid

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  test_and_install.sh
ovid/: __init__.py  basic.py  inspecting.py  mm.py  producing.py  test_basic.py  test_inspecting.py  test_mm.py  test_producing.py
src/ovid/: __init__.py  inspecting.py
tests/: test_basic.py
