# -*- coding: utf-8 -*-
[metadata]
name = ovid
version = attr: ovid.__version__
description = Text metamorphosis toolbox
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/veikman/ovid
author = Viktor Eikman
author_email = viktor.eikman@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)
    Topic :: Games/Entertainment :: Role-Playing
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Markup

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
tests_require =
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    tests
